# django-newsletter

./: .coveragerc  .gitignore  .landscape.yml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  COPYRIGHT  MANIFEST.in  Pipfile  README.rst  RELENG.rst  django-newsletter.tmproj  graph_models.dot  initial_data.json  pyproject.toml  requirements.txt  requirements_test.txt  runserver-kees.sh  runserver.sh  runtests.py  settings.py  setup.py  test_settings.py  test_urls.py  tox.ini  urls.py
.github/workflows/: release.yml  test.yml
.tx/: config
contrib/: README.rst  export_subscribers.sql
demo/: admin.py  initial_data.json  mailinglist  newsletter  settings.py  urls.py
demo/debug_toolbar/: VERSION
demo/static/: mailinglist  newsletter
demo/templates/: 404.html
django_extensions/: VERSION
docs/: Makefile  conf.py  graph_models.dot  index.rst  installation.rst  make.bat  reference.rst  requirements.txt  settings.rst  templates.rst  upgrading.rst  usage.rst
mailinglist/: admin.py  admin_forms.py  admin_urls.py  admin_views.py  forms.py  models.py  tests.py  urls.py  views.py
middleware/: threadlocals.py
newsletter/: __init__.py  admin.py  admin_blacklist_forms.py  admin_forms.py  admin_utils.py  apps.py  compat.py  converters.py  fields.py  forms.py  get_version.py  models.py  settings.py  signals.py  urls.py  utils.py  validators.py  views.py
seleniumtests/: addmessage.html  addnewsletter.html  addsubscription.html  adminlogin.html  adminlogout.html  adminmodules.html  admintests.html  import.html  previewaddsubmission.html  secondeverything.html  submitsubmission.html
test_project/: manage.py
tests/: __init__.py  settings.py  test_admin.py  test_fields.py  test_init.py  test_mailing.py  test_models.py  test_settings.py  test_templatetags.py  test_validators.py  test_web.py  urls.py  utils.py
(+262 files in other folders)
