[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "django-newsletter"
dynamic = ["version", "readme"]
description = "Django app for managing multiple mass-mailing lists with both plaintext as well as HTML templates (and pluggable WYSIWYG editors for messages), images and a smart queueing system all right from the admin interface."
requires-python = ">=3.9"
authors = [
    { name = "Mathijs de Bruin", email = "mathijs@mathijsfietst.nl" },
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
dependencies = [
  "Django>=4.2",
  "chardet",
  "Pillow",
]

[project.optional-dependencies]
test = [
  "python-ldap",
  "unicodecsv",
  "python-card-me",
  "django-tinymce",
  "django-imperavi",
]

[project.urls]
Homepage = "https://github.com/jazzband/django-newsletter/"

[tool.setuptools]
packages = { find = { exclude = ["tests", "test_project"] } }
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.setuptools.dynamic]
readme = { file = ["README.rst", "CHANGES.rst"], content-type = "text/x-rst" }